k8s/job-seeker-application/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: main-application
spec:
  selector:
    matchLabels:
      run: frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - name: frontend
          image: noneknow12/job-seeker-client:v12
          ports:
            - containerPort: 80
